[api、swagger] add priority column & filter
