# src/types/todo.ts
@@ -4,4 +4,5 @@ export interface ITodo extends Document {
     name: string
     description: string
     status: boolean
+    priority: Number
 }
